# kagerou

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  flake.nix
kagerou-cli/: Cargo.toml
kagerou-cli/src/: main.rs
kagerou-core/: Cargo.toml
kagerou-core/src/: lib.rs
kagerou-orchestrator/: Cargo.toml
kagerou-orchestrator/src/: arti_client.rs  hardcoded.rs  lib.rs  orchestrator.rs  process.rs  torrc.rs
