[workspace]
members = ["kagerou-core", "kagerou-orchestrator", "kagerou-cli"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
homepage = "https://github.com/pleme-io/kagerou"
repository = "https://github.com/pleme-io/kagerou"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
