[package]
name = "kagerou-core"
version = "0.1.0"
description = "Core types and traits for Tor testnet orchestration"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[lints]
workspace = true
