[package]
name = "kagerou-orchestrator"
version = "0.1.0"
description = "Local Tor testnet orchestrator — spawns C-tor processes for private networks"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
kakuremino = ["dep:kakuremino"]

[dependencies]
async-trait = "0.1"
kagerou-core = { path = "../kagerou-core" }
kakuremino = { git = "https://github.com/pleme-io/kakuremino", optional = true, default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[lints]
workspace = true
